--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,9 @@
 body {
     font-family: "Kumbh Sans", sans-serif;
 }
+
+#root {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
