--- a/app/src/components/NavBar/NavBar.css
+++ b/app/src/components/NavBar/NavBar.css
@@ -73,7 +73,7 @@ hr {
 .avatar {
     width: 100%;
     border-radius: 100%;
-    border: 2px solid transparent;
+    border: 2px solid transparents;
 }
 
 .avatar:hover {
