--- a/app/src/components/NavBar/NavBar.css
+++ b/app/src/components/NavBar/NavBar.css
@@ -1,81 +1,113 @@
-.avatar {
-    width: 100%;
-}
-
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
     height: 60px;
 }
 
-.left-side, .right-side {
+.logo-menu-section {
+    flex: 1;
+}
+
+.logo-menu-section .menu {
+    display: none;
+}
+
+.links-section {
+    flex: 4;
+}
+
+ul.links {
     display: flex;
-    align-items: center;
-    height: 100%;
+    list-style: none;
+    gap: 5%;
+    justify-content: left;
+    align-items: start;
 }
 
-.sneakers {
-    margin-right: 30px;
-}
-
-a {
-    position: relative;
+ul.links li a {
     text-decoration: none;
-    margin-left: 15px;
-    cursor: pointer;
-    opacity: 0.6;
-    display: inline-flex;
-    align-items: center;
-    height: 100%;
     color: #000;
+    opacity: 0.6;
+    position: relative;
 }
 
-a:hover {
+ul.links li a:hover {
+    cursor: pointer;
     opacity: 1;
 }
 
-a:hover::after {
-    content: "";
+ul.links li a:hover::after {
+    content: '';
     position: absolute;
-    bottom: -16px;
-    left: 0;
+    background-color: hsl(26, 100%, 55%);
     width: 100%;
     height: 4px;
-    background-color: hsl(26, 100%, 55%);
+    bottom: -40px;
+    left: 0;
 }
 
-hr {
-    position: relative; 
-    width: 100%;
-    opacity: 0.5;
+.cart-avatar-section {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 8%;
+}
+
+.cart-avatar-section .avatar {
+    width: 40px;
+}
+
+.nav-container hr {
     margin: 0;
-    top: 16px;
+    margin-top: 20px;
 }
 
-.profile, .cart {
-    border-radius: 100%;
-    cursor: pointer;
-    border: transparent;
-    background-color: transparent;
+.mobile-menu-active {
+    display: none;
 }
 
-.profile {
-    width: 35%;
+.links-section .close {
+    display: none;
 }
 
-.cart {
-    padding: 2px;
-    margin-right: 15px;
-}
+/* small screen size */
+@media (max-width: 768px) {
+    /* .logo-menu-section .menu {
+        display: flex;
+    } */
 
-.avatar {
-    width: 100%;
-    border-radius: 100%;
-    border: 2px solid transparents;
-}
+    .mobile-menu-active {
+        background-color: rgba(0, 0, 0, 0.6);
+        z-index: 100;
+        position: fixed;
+        display: block;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+    }
 
-.avatar:hover {
-    border: 2px solid hsl(26, 100%, 55%);
+    .nav-container hr {
+        display: none;
+    }
+
+    .links-section {
+        background-color: #ffffff;
+        position: absolute;
+        height: 100%;
+        width: 70%;
+        left: 0;
+        top: 0;
+        z-index: 101;
+    }
+
+    .links-section .links {
+        flex-direction: column;
+    }
+
+    .links-section .close {
+        display: block;
+    }
 }
