--- a/app/src/App.css
+++ b/app/src/App.css
@@ -7,3 +7,11 @@
     display: flex;
     flex-direction: column;
 }
+
+@media (max-width: 768px) {
+    .container {
+        width: 95%;
+        display: flex;
+        flex-direction: column;
+    }
+}
