--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Kumbh Sans", sans-serif;
 }
