--- a/app/src/App.css
+++ b/app/src/App.css
@@ -4,14 +4,22 @@
 
 .container {
     width: 70%;
-    display: flex;
-    flex-direction: column;
+}
+
+@media (max-width: 992px) {
+    .container {
+        width: 90%;
+    }
 }
 
 @media (max-width: 768px) {
-    .container {
-        width: 95%;
-        display: flex;
-        flex-direction: column;
+        .container {
+            width: 95%;
+    }
+}
+
+@media (max-width: 600px) {
+        .container {
+            width: 100%;
     }
 }
