--- a/app/src/components/ProductPage/ProductPage.css
+++ b/app/src/components/ProductPage/ProductPage.css
@@ -6,6 +6,70 @@
     width: 40%;
 }
 
+@media (min-width: 1200px) {
+    .productPage {
+        gap: 80px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .productPage {
+        gap: 40px;
+    }
+}
+
+@media (max-width: 768px) {
+    .image-gallery {
+        width: 60%;
+    }
+    .product-details {
+        width: 80%;
+    }
+
+    .productPage {
+        gap: 30px;
+    }
+    
+}
+
+@media (max-width: 600px) {
+    .image-gallery .thumbnail {
+        display: none;
+    }
+    .image-gallery {
+        width: 100%;
+        
+    }
+    .productPage {
+        padding: 0;
+        margin: 0;
+        gap: 0;
+    }
+    .active-image {
+        border-radius: 0;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+    }
+
+    .product-details {
+        width: 100%;
+        margin-top: 20px;
+    }
+    .buttons {
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        gap: 30px !important;
+    }
+    .product-quantity, .add-to-cart {
+        width: 100%;
+        height: 40px;
+    }
+}
+
 .product-quantity {
     background-color: #F7F8FD;
 }
