Start implementing the Contact page: - Begin frontend development for the Contact page. - Plan to create and style the Contact Details section next. - Design and implement a contact form for email inquiries. - Work on responsiveness and add animations.
Next steps:
- Move on to the About page and continue with subsequent sections.

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,10 +1,4 @@
 /* Styling for the navbar container */
-
-/* CSS Variable */
-:root {
-    --primary-color: hsl(26, 100%, 55%);
-}
-
 .nav-container hr {
     opacity: 0.1;
 }
@@ -88,6 +82,7 @@
 }
 
 .cart-count {
+    background-color: var(--primary-color);
     position: relative;
     top: 7px;
     right: -8px;
@@ -135,6 +130,10 @@
 .selected-product-item .product-image {
     width: 40px;
     height: 40px;
+}
+
+.checkout-btn {
+    background-color: var(--primary-color);
 }
 
 /* Tablet screen size designe */
