--- a/src/components/ProductPage/ProductPage.css
+++ b/src/components/ProductPage/ProductPage.css
@@ -1,8 +1,3 @@
-/* CSS Variable */
-:root {
-    --primary-color: hsl(26, 100%, 55%);
-}
-
 .product-details {
     width: 60%;
 }
@@ -16,11 +11,11 @@
 }
 
 .add-to-cart {
-    background-color: hsl(26, 100%, 55%);
+    background-color: var(--primary-color);
 }
 
 .minus, .plus {
-    color: hsl(26, 100%, 55%);
+    color: var(--primary-color);
 }
 
 
