--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -50,7 +50,7 @@
     position: absolute;
     background-color: var(--primary-color);
     width: 100%;
-    height: 4px;
+    height: 2px;
     bottom: -41px;
     left: 0;
 }
@@ -134,6 +134,8 @@
 
 .checkout-btn {
     background-color: var(--primary-color);
+    color: var(--secondary-color);
+
 }
 
 /* Tablet screen size designe */
